<resources>
    <string name="app_name">RideApp</string>
    <string name="Home">Acasă</string>
    <string name="Find_a_Ride">Găsește</string>
    <string name="Create_a_Ride">Adaugă</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_label">ADAUGĂ  DETALIILE  CĂLĂTORIEI  TALE</string>
    <string name="loc_plecare">Loc plecare</string>
    <string name="destinatie">Destinație</string>
    <string name="locuri_disponibile">Locuri disponibile:</string>
    <string name="pret_loc">Preț/loc:</string>
    <string name="alege_data">Alege data</string>
    <string name="data">Data:</string>
    <string name="loc_portbagaj">Loc portbagaj:</string>
    <string name="loc_bagaj">Loc bagaj:</string>
    <string name="ora">Ora</string>
    <string name="calendar_data">Data</string>
    <string name="register"><u>Nu ai cont? Înregistrează-te!</u></string>
    <string name="confirmare_parola">Confirmare parolă</string>
    <string name="parola">Parolă</string>
    <string name="email">Email</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="calatoriile_tale">CĂLĂTORIILE TALE</string>
    <string name="vezi_detalii">Vezi detalii</string>
    <string name="plecare_destinatie"><![CDATA[Plecare -> Destinatie]]></string>
    <string name="frecventezi">Frecventezi această rută des?</string>
</resources>
